--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-terraform/environment/dev/.terraform.lock.hcl
+terraform/environment/dev/sipLab/.terraform/*
 terraform/environment/dev/.terraform/*
 *.tfstate*
+.terraform.lock.hcl
