Working Consul Vault Nomad Cluster

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -17,6 +17,8 @@ host_key_checking = false
 retry_files_enabled = false
 # Default remote user
 remote_user = ansible
+# Log location
+log_path = ./ansible.log
 
 [privilege_escalation]
 # Defines the default method of gaining elevated permissions
