--- a/ansible/roles/hashicorp/nomad/vars/main.yml
+++ b/ansible/roles/hashicorp/nomad/vars/main.yml
@@ -1,6 +1,6 @@
 ---
-bootstrap_location: "/Users/{{ ansible_env.SUDO_USER }}/bootstrap-tokens"
-datacenter_name: "velp"
+bootstrap_location: "/home/{{ ansible_env.SUDO_USER }}/bootstrap-tokens"
+datacenter_name: "bolt"
 
 nomad_binary: "/usr/bin/nomad"
 nomad_etc_directory: "/etc/nomad.d"
@@ -84,7 +84,7 @@ nomad_tls_ttl: "8766h"
 nomad_server_ui_enabled: "true"
 nomad_server_ui_consul_ui_url: "https://consul.service.{{ consul_domain }}:8501/ui"
 nomad_server_ui_vault_ui_url: "https://vault.service.{{ consul_domain }}:8200/ui"
-nomad_server_ui_label_text: "In The Picture"
+nomad_server_ui_label_text: "bolt"
 nomad_server_ui_label_background_color: "palegreen"
 nomad_server_ui_label_text_color: "black"
 
