--- a/ansible/roles/hashicorp/consul/tasks/dns-requests.yml
+++ b/ansible/roles/hashicorp/consul/tasks/dns-requests.yml
@@ -44,7 +44,7 @@
         dest: "{{ consul_dns_token_local_path }}"
         mode: 0644
       become: false
-      delegate_to: localhost
+      delegate_to: "{{ groups['consul_servers'] | first }}"
 
   delegate_to: "{{ groups['consul_servers'] | first }}"
   when:
@@ -57,7 +57,7 @@
       ansible.builtin.shell: "awk '/SecretID/ {print $2}' {{ consul_dns_token_local_path }}"
       changed_when: false
       become: false
-      delegate_to: localhost
+      delegate_to: "{{ groups['consul_servers'] | first }}"
       register: dns_token_output
 
   delegate_to: "{{ groups['consul_servers'] | first }}"
