--- a/ansible/roles/hashicorp/nomad/tasks/backup.yml
+++ b/ansible/roles/hashicorp/nomad/tasks/backup.yml
@@ -3,7 +3,7 @@
   ansible.builtin.shell: "awk '/Secret ID/ {print $4}' {{ nomad_bootstrap_token_local_path }}"
   changed_when: false
   become: false
-  delegate_to: localhost
+  delegate_to: "{{ groups['consul_servers'] | first }}"
   run_once: true
   register: nomad_acl_bootstrap_output
   tags: backup
@@ -31,9 +31,9 @@
       ansible.builtin.copy:
         content: "{{ snapshot_policy_token_output_raw.stdout }}"
         dest: "{{ nomad_snapshot_token_local_path }}"
-        mode: 0644
+        mode: 0774
       become: false
-      delegate_to: localhost
+      delegate_to: "{{ groups['consul_servers'] | first }}"
 
   delegate_to: "{{ groups['nomad_servers'] | first }}"
   when:
@@ -45,7 +45,7 @@
   ansible.builtin.shell: "awk '/Secret ID/ {print $4}' {{ nomad_snapshot_token_local_path }}"
   changed_when: false
   become: false
-  delegate_to: localhost
+  delegate_to: "{{ groups['consul_servers'] | first }}"
   register: nomad_snapshot_bootstrap_output
   run_once: true
   tags: backup
