--- a/ansible/roles/hashicorp/nomad/tasks/pre-acl-configuration.yml
+++ b/ansible/roles/hashicorp/nomad/tasks/pre-acl-configuration.yml
@@ -3,7 +3,7 @@
   ansible.builtin.shell: "awk '/SecretID/ {print $2}' {{ consul_bootstrap_token_local_path }}"
   changed_when: false
   become: false
-  delegate_to: localhost
+  delegate_to: "{{ groups['consul_servers'] | first }}"
   register: consul_acl_bootstrap_output
   run_once: true
 
