--- a/ansible/roles/hashicorp/vault/tasks/acl.yml
+++ b/ansible/roles/hashicorp/vault/tasks/acl.yml
@@ -10,6 +10,11 @@
   delegate_to: "{{ groups['vault_servers'] | first }}"
   run_once: true
 
+- name: Debug - Print Vault bootstrapped status
+  ansible.builtin.debug:
+    msg: "Vault is already bootstrapped: {{ vault_bootstrapped.stat.exists }}"
+  run_once: true
+
 - name: ACL - Check if Consul has ACL mode enabled.
   ansible.builtin.shell: "cat {{ consul_etc_directory }}/consul.hcl | grep -a3 '^acl' | grep enabled | awk '{print $3}'"
   changed_when: false
@@ -18,6 +23,11 @@
   delegate_to: "{{ groups['vault_servers'] | first }}"
   run_once: true
   register: consul_acl_enabled
+
+- name: Debug - Print Consul ACL enabled status
+  ansible.builtin.debug:
+    msg: "Consul ACL enabled: {{ consul_acl_enabled.stdout }}"
+  run_once: true
 
 - name: ACL
   block:
@@ -31,7 +41,7 @@
       ansible.builtin.shell: "awk '/SecretID/ {print $2}' {{ consul_bootstrap_token_local_path }}"
       changed_when: false
       become: false
-      delegate_to: localhost
+      delegate_to: "{{ groups['consul_servers'] | first }}"
       register: consul_acl_bootstrap_output
 
     - name: ACL - Set the Secret ID as a fact.
@@ -61,13 +71,13 @@
         dest: "{{ vault_bootstrap_token_local_path }}"
         mode: 0644
       become: false
-      delegate_to: localhost
+      delegate_to: "{{ groups['consul_servers'] | first }}"
 
     - name: Retrieve Secret ID from bootstrap output.
       ansible.builtin.shell: "awk '/SecretID/ {print $2}' {{ vault_bootstrap_token_local_path }}"
       changed_when: false
       become: false
-      delegate_to: localhost
+      delegate_to: "{{ groups['consul_servers'] | first }}"
       register: vault_acl_bootstrap_output
 
     - name: Set the Secret ID as a fact.
@@ -93,6 +103,12 @@
     - ansible_hostname in groups['vault_servers']
   delegate_to: "{{ groups['vault_servers'] | first }}"
   run_once: true
+
+- name: Debug - Print Vault ACL Bootstrap Secret ID
+  ansible.builtin.debug:
+    msg: "Vault ACL Bootstrap Secret ID: {{ vault_acl_bootstrap_secret_id }}"
+  when:
+    - ansible_hostname in groups['vault_servers'] or ansible_hostname in groups['vault_clients']
 
 - name: Ensure Vault Service Token is set in config file.
   ansible.builtin.lineinfile:
