--- a/ansible/roles/hashicorp/vault/tasks/backup.yml
+++ b/ansible/roles/hashicorp/vault/tasks/backup.yml
@@ -1,10 +1,18 @@
 ---
-- name: Create fact of admin password.
-  ansible.builtin.set_fact:
-    admin_password: "{{ lookup('file', vault_admin_local_path) }}"
-  delegate_to: localhost
+- name: Read admin password from file on consul1
+  ansible.builtin.slurp:
+    src: "/home/gregbolton/bootstrap-tokens/vault_admin_password.txt"
+  register: slurped_admin_password
+  delegate_to: consul1
   run_once: true
   tags: backup
+
+- name: Decode and set the admin password as a fact
+  ansible.builtin.set_fact:
+    admin_password: "{{ slurped_admin_password['content'] | b64decode }}"
+  run_once: true
+  tags: backup
+
 
 - name: Login to Vault
   delegate_to: "{{ groups['vault_servers'] | first }}"
