--- a/ansible/roles/hashicorp/vault/tasks/pki_int.yml
+++ b/ansible/roles/hashicorp/vault/tasks/pki_int.yml
@@ -1,7 +1,15 @@
-- name: Create fact of admin password.
+---
+- name: Read admin password from file on consul1
+  ansible.builtin.slurp:
+    src: "/home/gregbolton/bootstrap-tokens/vault_admin_password.txt"
+  register: slurped_admin_password
+  delegate_to: consul1
+  run_once: true
+  tags: pki_int
+
+- name: Decode and set the admin password as a fact
   ansible.builtin.set_fact:
-    admin_password: "{{ lookup('file', vault_admin_local_path) }}"
-  delegate_to: localhost
+    admin_password: "{{ slurped_admin_password['content'] | b64decode }}"
   run_once: true
   tags: pki_int
 
@@ -11,21 +19,21 @@
   run_once: true
   tags: pki_int
   block:
-    - name: Retrieve client token.
+    - name: Retrieve client token using the admin password.
       ansible.builtin.uri:
         url: "{{ vault_address }}/v1/auth/userpass/login/{{ vault_admin_username }}"
         method: POST
         body_format: json
         body: '{ "password": "{{ admin_password }}" }'
-        status_code:
-          - 200
-          - 204
+        status_code: [200, 204]
         validate_certs: false
       register: vault_admin_login_response
 
     - name: Set fact of client token.
       ansible.builtin.set_fact:
         admin_token: "{{ vault_admin_login_response.json.auth.client_token }}"
+      tags: pki_int
+
 
     - name: Register PKI mount results
       ansible.builtin.uri:
