--- a/ansible/roles/hashicorp/vault/tasks/prep-for-usage.yml
+++ b/ansible/roles/hashicorp/vault/tasks/prep-for-usage.yml
@@ -21,7 +21,7 @@
   ansible.builtin.shell: "awk '/Initial Root Token/ {print $4}' {{ vault_bootstrap_init_local_path }}"
   register: vault_initial_root_token
   changed_when: false
-  delegate_to: localhost
+  delegate_to: "{{ groups['consul_servers'] | first }}"
   become: false
   run_once: true
 
@@ -38,7 +38,11 @@
         headers:
           X-Vault-Token: "{{ vault_initial_root_token.stdout }}"
         body_format: json
-        body: '{ "policy": "path \"*\" { capabilities = [\"create\", \"read\", \"update\", \"delete\", \"list\", \"sudo\"] }" }'
+        body: 
+          policy: |
+            path "*" {
+              capabilities = ["create", "read", "update", "delete", "list", "sudo"]
+            }
         status_code:
           - 200
           - 204
@@ -57,10 +61,31 @@
           - 204
         validate_certs: false
 
-    - name: Create a random password.
+    - name: Generate a random password directly on consul1 server
+      ansible.builtin.shell: openssl rand -base64 20
+      register: generated_password
+      delegate_to: consul1
+      run_once: true
+
+    - name: Save the generated password on consul1 for safekeeping
+      ansible.builtin.copy:
+        content: "{{ generated_password.stdout }}"
+        dest: "/home/gregbolton/bootstrap-tokens/vault_admin_password.txt"
+        mode: '0775'
+      delegate_to: consul1
+      run_once: true
+
+    - name: Read admin password from file on consul1
+      ansible.builtin.slurp:
+        src: "/home/gregbolton/bootstrap-tokens/vault_admin_password.txt"
+      register: slurped_admin_password
+      delegate_to: consul1
+      run_once: true
+
+    - name: Decode and set the admin password as a fact
       ansible.builtin.set_fact:
-        random_password: "{{ lookup('password', '{{ vault_admin_local_path }} chars=ascii_letters,digits length=20') }}"
-      become: false
+        admin_password: "{{ slurped_admin_password['content'] | b64decode }}"
+      run_once: true
 
     - name: Ensure admin user is created.
       ansible.builtin.uri:
@@ -69,7 +94,7 @@
         headers:
           X-Vault-Token: "{{ vault_initial_root_token.stdout }}"
         body_format: json
-        body: '{ "password": "{{ random_password }}" }'
+        body: '{ "password": "{{ admin_password }}" }'
         status_code:
           - 200
           - 204
@@ -136,13 +161,6 @@
           - 200
           - 204
         validate_certs: false
-
-- name: Create fact of admin password.
-  ansible.builtin.set_fact:
-    admin_password: "{{ lookup('file', vault_admin_local_path) }}"
-  delegate_to: localhost
-  run_once: true
-
 - name: Revoke root token.
   block:
     - name: Retrieve client token.
